Fix quick reply focus ring cut off

--- a/src/component/shared/SliderContainer/SliderContainer.scss
+++ b/src/component/shared/SliderContainer/SliderContainer.scss
@@ -29,12 +29,12 @@ $focusRingWidth: 3px;
 }
 
 .sliderButton--left {
-  left: -30px;
+  left: -32px;
   z-index: 1;
 }
 
 .sliderButton--right {
-  right: -32px;
+  right: -34px;
   z-index: 1;
 }
 
@@ -58,7 +58,7 @@ $focusRingWidth: 3px;
     }
 
     .slick-slider {
-      margin: 0 22px;
+      margin: 0 24px;
     }
 
     .slick-list {
